k8s/base/api/campaign-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: campaign-api
    component: api
  name: campaign-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: campaign-api
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-python: 'true'
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
        prometheus.io/path: "/metrics"
        sidecar.opentelemetry.io/inject: app-sidecar
      labels:
        app: campaign-api
        component: api
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: marketing-assistant-config
        image: quay.io/rh-ee-dayeo/marketing-assistant:campaign-api
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 30
        name: api
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: campaign-api
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: campaign-api
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: campaign-api
spec:
  port:
    targetPort: 5000
  tls:
    termination: edge
  to:
    kind: Service
    name: campaign-api
