k8s/base/api/event-hub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: event-hub
    component: api
  name: event-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-hub
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-python: 'true'
        sidecar.opentelemetry.io/inject: app-sidecar
      labels:
        app: event-hub
        component: api
    spec:
      containers:
      - image: quay.io/rh-ee-dayeo/marketing-assistant:event-hub
        name: hub
        ports:
        - containerPort: 5001
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: event-hub
spec:
  ports:
  - port: 5001
    targetPort: 5001
  selector:
    app: event-hub
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
  name: event-hub
spec:
  port:
    targetPort: 5001
  tls:
    termination: edge
  to:
    kind: Service
    name: event-hub
